--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4"
+  },
+  "engines": {
+    "node": "8.9.0",
+    "npm": "5.5.1"
   }
 }
